Move the Z80 interpreter to its own Git repository.
This way, it can be used by other projects (such as a test suite).

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "clown68000"]
 	path = clown68000
 	url = https://github.com/Clownacy/clown68000
+[submodule "clownz80"]
+	path = clownz80
+	url = https://github.com/Clownacy/clownz80
